--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,8 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+		Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -20,4 +21,8 @@ a {
 
 *:focus {
 	outline: #14b8a6 solid;
+}
+
+.grecaptcha-badge {
+	visibility: hidden;
 }
