--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: Montserrat;
+	src: url("/fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+}
+
+@font-face {
+	font-family: "Roboto Slab";
+	src: url("/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf");
+}
+
 html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-		Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: Montserrat, system-ui;
 }
 
 a {
