--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,8 +26,59 @@ a {
 
 * {
 	box-sizing: border-box;
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
 }
 
 .grecaptcha-badge {
 	visibility: hidden;
+}
+
+@layer utilities {
+	.header-gradient-dark {
+		background: rgb(24, 24, 27);
+		background: -moz-linear-gradient(
+			145deg,
+			rgba(24, 24, 27, 1) 0%,
+			rgba(24, 24, 27, 1) 50%,
+			rgba(24, 24, 27, 0) 100%
+		);
+		background: -webkit-linear-gradient(
+			145deg,
+			rgba(24, 24, 27, 1) 0%,
+			rgba(24, 24, 27, 1) 50%,
+			rgba(24, 24, 27, 0) 100%
+		);
+		background: linear-gradient(
+			145deg,
+			rgba(24, 24, 27, 1) 0%,
+			rgba(24, 24, 27, 1) 50%,
+			rgba(24, 24, 27, 0) 100%
+		);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#18181b",endColorstr="#18181b",GradientType=1);
+	}
+
+	.header-gradient-light {
+		background: rgb(250, 250, 250);
+		background: -moz-linear-gradient(
+			145deg,
+			rgba(250, 250, 250, 1) 0%,
+			rgba(250, 250, 250, 1) 50%,
+			rgba(250, 250, 250, 0) 100%
+		);
+		background: -webkit-linear-gradient(
+			145deg,
+			rgba(250, 250, 250, 1) 0%,
+			rgba(250, 250, 250, 1) 50%,
+			rgba(250, 250, 250, 0) 100%
+		);
+		background: linear-gradient(
+			145deg,
+			rgba(250, 250, 250, 1) 0%,
+			rgba(250, 250, 250, 1) 50%,
+			rgba(250, 250, 250, 0) 100%
+		);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fafafa",endColorstr="#fafafa",GradientType=1);
+	}
 }
