--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,13 @@
 @tailwind utilities;
 
 @font-face {
+	font-display: swap;
 	font-family: Montserrat;
 	src: url("/fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
 }
 
 @font-face {
+	font-display: swap;
 	font-family: "Roboto Slab";
 	src: url("/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf");
 }
